--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,80 @@
-openrouter  # use `pip install openrouter` to get the right client
-yfinance
-feedparser
-colorama
-tenacity
-requests
+alembic==1.15.2
+annotated-types==0.7.0
+anyio==4.8.0
+attrs==25.1.0
+bcrypt==4.3.0
+beautifulsoup4==4.13.3
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+cryptography==44.0.2
+distro==1.9.0
+docopt==0.6.2
+ecdsa==0.19.1
+fastapi==0.115.8
+feedparser==6.0.11
+frozendict==2.4.6
+google==3.0.0
+greenlet==3.1.1
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+jiter==0.9.0
+joblib==1.4.2
+jwt==1.3.1
+Mako==1.3.9
+MarkupSafe==3.0.2
+multitasking==0.0.11
+nltk==3.9.1
+numpy==2.2.4
+oauthlib==3.2.2
+openai==1.68.2
+outcome==1.3.0.post0
+pandas==2.2.3
+passlib==1.7.4
+peewee==3.17.9
+pipreqs==0.4.13
+platformdirs==4.3.7
+praw==7.8.1
+prawcore==2.4.0
+pyasn1==0.4.8
+pycparser==2.22
+pydantic==2.10.6
+pydantic_core==2.27.2
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+python-jose==3.4.0
+python-multipart==0.0.20
+pytz==2025.1
+regex==2024.11.6
+requests==2.32.3
+requests-oauthlib==2.0.0
+rsa==4.9
+selenium==4.28.1
+sgmllib3k==1.0.0
+six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.6
+SQLAlchemy==2.0.40
+starlette==0.45.3
+tenacity==9.1.2
+textblob==0.19.0
+tqdm==4.67.1
+trio==0.29.0
+trio-websocket==0.11.1
+tweepy==4.15.0
+typing_extensions==4.12.2
+tzdata==2025.2
+update-checker==0.18.0
+urllib3==2.3.0
+uvicorn==0.34.0
+vaderSentiment==3.3.2
+websocket-client==1.8.0
+wsproto==1.2.0
+yarg==0.1.10
+yfinance==0.2.55
